# py-bridge-flow

./: main.py  pyproject.toml
src/Application/DTO/: RegisterGroupRequest.py
src/Application/UseCase/: DailyBroadcast.py  GetSystemStatus.py  GetWelcomeMessage.py  RegisterGroup.py  SyncGroup.py  UpdateUserPreference.py
src/Domain/Entity/: Group.py  User.py
src/Domain/Repository/: GroupRepository.py  UserRepository.py
src/Infrastructure/Config/: Settings.py
src/Infrastructure/Delivery/Telegram/Handlers/: AdminHandler.py  AutoRegistrationHandler.py  CallbackHandler.py  CheckStatusHandler.py  CommandHandler.py  RegistrationHandler.py  StartHandler.py  StatusHandler.py
src/Infrastructure/Delivery/Telegram/Jobs/: BroadcastJob.py
src/Infrastructure/Persistence/: MongoClient.py  MongoGroupRepository.py  MongoUserRepository.py
src/py_superbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/Integration/: test_mongo_repository.py
tests/Unit/: test_register_group.py
